--- a/style1.css
+++ b/style1.css
@@ -64,7 +64,8 @@ h2 {
 
 .description-box p {
   text-align: justify;
-  line-height: 1.7;
+  font-size: 20px; 
+  line-height: 1.9;
   font-size: 1rem;
 }
 
